--- a/Laptop/pom.xml
+++ b/Laptop/pom.xml
@@ -51,6 +51,13 @@
 			<artifactId>tomcat-jasper</artifactId>
 			<version>9.0.20</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
