--- a/Laptop/docker-compose.yml
+++ b/Laptop/docker-compose.yml
@@ -1,22 +1,28 @@
 version: '3'
 
-
+volumes:
+  mysql-room:
 
 services:
   mysql-database:
     image: 'mysql:latest'
+    restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_PASSWORD=root
       - MYSQL_DATABASE=laptopsdb
-    ports:
-      - "3307:3306"
     volumes:
       - mysql-room:/var/lib/mysql
+      - ./init1:/docker-entrypoint-initdb.d
+      
+    ports:
+      - "3307:3306"
+    
   docker-container-laptop:
     image: laptop.jar
     ports:
       - "9090:9191"
+   
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql-database:3306/laptopsdb
       SPRING_DATASOURCE_USERNAME: "root"
@@ -27,5 +33,3 @@ services:
     depends_on:
       - mysql-database
       
-volumes:
-  mysql-room:
